This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
1/20/26: SEM_4-2-16
2/10/26: Made autocontouring dialog remember group selections between openings
with one SerialEM run.  Improved and clarified handling of group selections
wen using autocontouring from multigrid (in 4.2).

2/10/26: Fixed % C2 value displayed in Scope Status when spot size is changed
through Scope Control and there is no underlying intensity change (In 4.2).

2/9/26: On JEOL, made the check for whether the grid that multigrid loaded is
actually on stage optional, enabled by property MulGridCheckLoadOnJeol.

2/9/26: Added option to SetAxisPosition command to enter image shift values
instead of position and angle.

2/9/26: Changed the monitoring of aperture status so that it occurs at
5-second intervals with values of 1 for MonitorC2ApertureSize and
ShowApertureStatus but quietly gives up when the aperture panel is not
visible, so changes through TUI should be found in the update.

2/9/26: Added argument to MakePolygonsAtSquares to set them as Acquire.

2/9/26: Added calibration of beam size for non-Titan scopes and script
commands to report size computed from calibration and to set beam size.

2/9/26: Made Script-Edit menu show all scripts with names.

2/6/26: Added property DropPlusInHoleNameIfUtapi to omit '+' from the hole
position component of frame filenames when doing Multiple Records with a
Falcon camera through UTAPI (In 4.2).

1/29/26: Added script command to return coordinates of all positions found by
Hole Finder into array variables.

1/27/26: Added aperture settings to states and navigator maps; the state
dialog has an option to specify if apertures should be set when setting a
state; and apertures will be set when going to a map acquire state (e.g., for